--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,60 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Poppins");
+
+* {
+  font-family: "Poppins", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0px;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.align-items-center {
+  align-items: center;
+}
+
+.justify-content-center {
+  justify-content: center;
+}
+
+.m-0 {
+  margin: 0px !important;
+}
+
+.mx-3 {
+  padding-left: 4rem;
+  padding-right: 4rem;
+}
+.fw-400 {
+  font-weight: 400 !important;
+}
+.fw-500 {
+  font-weight: 500 !important;
+}
+.fw-600 {
+  font-weight: 600 !important;
+}
+
+.text-gray {
+  color: #a8a8a8 !important;
+}
+
+.mw-100 {
+  max-width: 100% !important;
+}
+
+a {
+  color: #2376e5;
+  text-decoration: none;
+}
+
+.font-large {
+  font-size: 28px !important;
+}
+
+.cursor-pointer {
+  cursor: pointer !important;
 }
