--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -1,12 +1,20 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans");
+
 .app-footer {
   box-shadow: 0px 0px 6px rgba(134, 134, 134, 0.25);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-flow: row nowrap;
-  padding: 0.7rem 1rem;
+  margin-top: 30px !important;
 }
 
 .ns-nav {
   font-weight: 400;
+}
+
+.footer-text,
+.footer-link {
+  font-family: "Noto Sans";
+  font-size: 14px;
+}
+
+.footer-logo {
+  width: 50%;
 }
