--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,21 @@ body {
   margin: 0px;
 }
 
+body::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+body {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 .d-flex {
   display: flex;
+}
+.mt-3 {
+  margin-top: 12px !important;
 }
 
 .align-items-center {
@@ -22,6 +35,10 @@ body {
 
 .m-0 {
   margin: 0px !important;
+}
+
+.p-0 {
+  padding: 0px !important;
 }
 
 .mx-3 {
@@ -57,4 +74,8 @@ a {
 
 .cursor-pointer {
   cursor: pointer !important;
+}
+
+.h-100 {
+  height: 100% !important;
 }
