--- a/src/components/Form/styles.css
+++ b/src/components/Form/styles.css
@@ -2,12 +2,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 3em;
+  padding: 1em;
 }
 
 .form-header {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.signup-form {
+  max-width: 400px;
 }
 
 .college-form {
